--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap 5 - Starter Example</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
-<body>
+<body data-bs-spy="scroll" data-bs-target="#navbarResponsive" data-bs-offset="100">
 
 <!-- Start Home section-->
 <div id="home">
@@ -55,32 +56,32 @@
 <!-- End Home section -->
 
 <!-- Start About section-->
-<div class="" id="about">
-    <div class=""></div>
-    <div class="">
+<div class="container" id="about">
+    <div class="border-top border-dark my-3 w-100"></div>
+    <div class="row">
 
-        <div class="">
+        <div class="col-md-4">
             <img src="img/1.jpg" alt="" class="img-fluid">
-            <h4 class="">Plan</h4>
+            <h4 class=" my-3">Plan</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam itaque quas modi sunt aspernatur
                 assumenda autem pariatur!</p>
-            <a href="#" class="">Our Story</a>
+            <a href="#" class="btn btn-outline-dark my-3">Our Story</a>
         </div>
 
-        <div class="">
+        <div class="col-md-4">
             <img src="img/2.jpg" alt="" class="img-fluid">
-            <h4 class="">Execute</h4>
+            <h4 class="my-3">Execute</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam itaque quas modi sunt aspernatur
                 assumenda autem pariatur!</p>
-            <a href="#" class="">Our Story</a>
+            <a href="#" class="btn btn-outline-dark my-3">Our Story</a>
         </div>
 
-        <div class="">
+        <div class="col-md-4">
             <img src="img/3.jpg" alt="" class="img-fluid">
-            <h4 class="">Deliver</h4>
+            <h4 class="my-3">Deliver</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam itaque quas modi sunt aspernatur
                 assumenda autem pariatur!</p>
-            <a href="#" class="">Our Story</a>
+            <a href="#" class="btn btn-outline-dark my-3">Our Story</a>
         </div>
 
     </div>
@@ -90,7 +91,7 @@
 
 <!-- End About section -->
 
-<!-- Start Fixed Background IMG -->
+<!-- Start Fixed Background IMG
 
 <div class="fixed-background" id="service">
     <div class="services">
@@ -104,6 +105,7 @@
 
         </div>
     </div>
+
     <div class="fixed-wrap service-wrap">
         <div class="fixed service-inner">
             <img src="img/matrix.jpg" alt="" class="img-fluid">
@@ -111,34 +113,34 @@
     </div>
 </div>
 
-<!-- End Fixed Background IMG -->
+ End Fixed Background IMG -->
 
-<div id="contact" class="">
-    <div class="">
-        <div class=""></div>
-        <h1 class="">Built with ease</h1>
-        <div class=""></div>
-        <p class="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda hic, magni fuga accusantium
+<div id="contact" class="container mt-5">
+    <div class="text-center">
+        <div class="border-top border-dark w-25 mx-auto my-3"></div>
+        <h1 class="text-uppercase">Built with ease</h1>
+        <div class="border-top border-dark w-25 mx-auto my-3"></div>
+        <p class="text-capitalize lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda hic, magni fuga accusantium
             nulla ratione odit praesentium? Maiores in veniam accusamus cupiditate necessitatibus. Perspiciatis ab
             aliquam quod fugiat commodi atque.</p>
-        <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita dolorum ullam vitae id
+        <p class="text-capitalize lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita dolorum ullam vitae id
             veritatis quidem eaque ratione, excepturi minima porro dicta. Voluptatem maxime magnam illo aliquam corporis
             provident sunt sequi?</p>
-        <a href="#" class="">Contact Us</a>
+        <a href="#" class="btn btn-lg btn-outline-dark my-3">Contact Us</a>
     </div>
 </div>
 
-<footer>
-    <div class="">
+<footer class="bg-dark">
+    <div class="container">
         <div class="">
-            <div class="">
-                <img src="img/logo.png" alt="" class="">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque accusamus rem deleniti.</p>
-                <ul class="">
-                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+            <div class="text-center">
+                <img src="img/logo.png" alt="" class="w-25 img-fluid">
+                <p style="color: white;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque accusamus rem deleniti.</p>
+                <ul class="social d-flex justify-content-between">
+                    <li><a href="#"><i class="bi bi-facebook"></i></a></li>
+                    <li><a href="#"><i class="bi bi-twitter"></i></a></li>
+                    <li><a href="#"><i class="bi bi-instagram"></i></a></li>
+                    <li><a href="#"><i class="bi bi-youtube"></i></a></li>
                 </ul>
             </div>
         </div>
